tweaked answer container, improved spacing bug slightly

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 .question-container {
   width: 70%;
   padding: 20px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 /* Add margin-top to the next button container */
@@ -72,8 +72,8 @@ body {
   padding: 20px; /* Adjust the padding as needed */
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  width: 400px;
+  margin: auto;
+  max-width: 400px;
   gap: 20px;
 }
 
@@ -139,9 +139,21 @@ input[type="radio"]:checked {
 }
 
 .answer {
-  display: inline-block;
-  margin: 0;
+  flex: 1 0 150px; 
+  min-width: 150px; 
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
+
+.answer:hover {
+  background-color: #86c2ae;
+  color: white;
+}
+
 
 .countdown {
   font-size: 100px;
@@ -163,9 +175,11 @@ input[type="radio"]:checked {
 }
 
 .answer-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap: 20px;
+  justify-content: center;
+  text-align: center; 
 }
 
 .instructions {
